#[[C&CXX]]
cmake_minimum_required(VERSION 3.23)
project(C_CXX)
set(CMAKE_CXX_STANDARD 14)

#[[add_executable(C_CXX com/my/hundreds/a1/hello.c)]]
add_executable(C_CXX com/my/hundreds/a1/world.c)
#[[add_executable(C&CXX com/my/hundreds/a2/world.c)]]

#[[C&CXX++]]
#[[cmake_minimum_required(VERSION 3.23)
project(MyCXX)
set(CMAKE_CXX_STANDARD 11)

add_executable(C com/my/hundreds/a1_2/hello.cpp)]]
